--- a/_includes/header-subpage.html
+++ b/_includes/header-subpage.html
@@ -1,4 +1,4 @@
-<header id="site-header" class="site-header">
+<header id="site-header" class="site-header sub-page">
 	<a class="site-header__logo" href="{{ site.url }}{{ site.baseurl }}/">
 	<svg class="hbc-tech-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 52">
 		<use class="hbc-tech-logo__text" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-icons.svg#hbc-tech-logo"></use>
@@ -32,5 +32,5 @@
 	        {% endif %}
         {% endif %}
     </p>
-    {% include navigation.html %}
+{% include navigation.html %}
 </header>
