--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,28 +1,35 @@
 .site-header {
     grid-area: hd;
-    display: block;
-    // max-height: 200px;
-    // max-width: 100vw;
-    margin-bottom: 0px;
-    padding: 20px;
-	background-color: $hbc-off-white;
-    border-bottom: solid 1px $hbc-border;
+    display: grid;
+    grid-auto-rows: 1fr;
+	grid-template-columns: 80px 1fr 70px;
+	grid-template-areas: "logo meta nav";
 	color: $hbc-black;
     z-index: 100;
-
+    transition: all 100ms ease-out;
+    width: 100%;
+    pointer-events: none;
+    position: absolute;
 
 	&__logo {
 	    grid-area: logo;
 	    align-self: baseline;
 	    display: block;
-	    margin: auto;
-	    height: 65px;
-        width: 65px;
+	    height: 75px;
+        width: 75px;
+		background-color: black;
+	    padding: 9px;
+	    margin-left: $content-side-margins;
 
 		.hbc-tech-logo{
 	        transition: all 200ms ease-out;
 		    height: 100%;
 		    width: 100%;
+		    pointer-events: auto;
+
+		    &__text {
+	    	    fill: white;
+		    }
 		}
 	}
 
@@ -36,151 +43,47 @@
 	    visibility: hidden;
 		display: none;
 		transform: translateX(20px);
-	}
-
-	.navigation {
-	    grid-area: nav;
-	    align-self: center;
-	    display: block;
-	    text-align: center;
-	    padding: 0;
-	    margin: 0 auto;
-	    margin-top: 20px;
-	    
-	    &__link-item {
-	        display: inline-block;
-	        list-style: none;
-	        text-align: right;
-	        height: 36px;
-	        margin: 0 0 0 40px;
-
-	        &:first-child {
-	        	margin-left: 0;
-	        }
-	    }
-
-	    &__link {
-	        display: block;
-	        line-height: 120%;
-			color: $hbc-black;
-			text-decoration: none;
-
-	        &:hover,
-	        &--current:hover {
-	            color: $hbc-highlight;
-	            cursor: pointer;
-	            
-	            .navigation__link-highlight {
-
-	                &:after {
-	                    border-bottom: solid 2px $hbc-highlight;
-	                    transform: scaleX(1);
-	                }
-	            }
-	        }
-
-	        &--current {
-	            color: $hbc-black;
-	            
-	            .navigation__link-highlight {
-
-	                &:after {
-	                    border-bottom: solid 2px $hbc-black;
-	                    transform: scaleX(1);
-	                }
-	            }
-
-	        }
-	    }
-
-	    &__link-highlight {
-	        display: inline-block;
-	        height: 36px;
-	        padding: 10px 0;
-			transition: color 0ms ease-out;
-	        font-weight: 500;
-
-	        &:after {
-	            content: "";
-	            display: block;
-	            margin-top: 4px;
-	            border-bottom: solid 2px $hbc-highlight;
-	            transform: scaleX(0);
-	            transform-origin: 0 0;
-	            transition: transform 150ms ease-out;
-	        }
-		}
+	    pointer-events: auto;
 	}
 
 	// small landscape
-	@include media('>=small', 'landscape') {
-	    display: grid;
-	    grid-auto-rows: 1fr;
-		grid-template-columns: 20% 80%;
-		grid-template-areas: "logo nav";
-	    transition: all 100ms ease-out;
-	    padding: 20px;
+	@include media('>=small', '<medium', 'landscape') {
+	    position: absolute;
 
-		&__logo {
-			margin: 0;
-		}
-
-	    .navigation {
-	    	margin: 0;
-	    	text-align: right;
+	    &__logo {
+			height: 100px;
+		    width: 100px;
 	    }
 	}
 
    	// medium
 	@include media('>=medium') {
-	    display: grid;
-	    grid-auto-rows: 1fr;
-		grid-template-columns: 20% 80%;
-		grid-template-areas: "logo nav";
-	    transition: all 100ms ease-out;
-	    padding: 20px 40px;
-	    border: 0;
-	    
-		&__logo {
-			margin: 0;
-		}
+		position: absolute;
 
-	    .navigation {
-	    	margin: 0;
-	    	text-align: right;
-	    }
-	}
-
-   	// medium landscape
-	@include media('>=medium', 'landscape') {
-	    
 		&__logo {
-	        height: 70px;
-		    width: 85px;
-		    margin-bottom: -20px;
+			height: 150px;
+		    width: 150px;
+			margin-left: 40px;
 		}
 	}
+
 
 	// large
 	@include media('>large') {
-	    grid-template-columns: minmax(70px, 150px) 1fr 350px;
-	    grid-template-areas: "logo meta nav";
 	    border-bottom: solid 0px $hbc-border;
-	    padding: 20px 40px;
+	    margin-top: 120px;
 
 		&__logo {
-			height: 100px;
-		    width: 100px;
+			margin-left: 0;
 		}
 
-	    &--scaled,
 	    &--shaddow {
 			position: sticky;
 		    top: 0;
-    	    transition: all 300ms ease-out;
-	        padding: 10px 40px;
-		    margin-bottom: 10px;
 		    max-height: $sticky-header-height;
+	        background-color: $hbc-off-white;
+		    margin-bottom: 10px;
+    	    transition: all 300ms ease-out;
 
 			.site-header__logo {
 				transition: all 200ms ease-out;
@@ -230,15 +133,9 @@
 			}
 		}
 	}
+}
 
-	// large
-	@include media('>xlarge') {
-
-		&__logo {
-			transition: all 200ms ease-out;
-			width: 120px;
-		    margin-top: 20px;
-		    margin-bottom: -20px;
-		}
-	}
+.sub-page {
+	position: sticky;
+	margin-top: 0;
 }
