--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -1,1 +1,44 @@
+.navigation {
+    grid-area: nav;
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    align-self: center;
+    pointer-events: auto;
 
+    &__link {
+        display: inline-flex;
+		background-color: rgba($hbc-white, 0.8);
+	    border-radius: 100%;
+		padding: 10px;
+	    width: 50px;
+	    height: 50px;
+
+		&__svg-icon {
+		    width: 100%;
+		    height: 100%;
+		    overflow: visible !important;
+
+		    .bar {
+				stroke: black;
+				stroke-width: 2px;
+				stroke-linecap: round;
+
+				&__top {
+					// d: path("M0,5 L30,5");
+				}
+
+				&__middle {
+					// d: path("M0,15 L30,15");
+				}
+
+				&__bottom {
+					
+				}
+		    	
+		    }
+
+		}
+
+    }
+}
