--- a/assets/sass/pages/_insights-page.scss
+++ b/assets/sass/pages/_insights-page.scss
@@ -1,15 +1,19 @@
+@include media('>small') {
+	$content-side-margins: 40px;
+}
+
 // insights page
 .article-listing {
+	display: grid;
 
 	&__featured {
 		display: grid;
-		grid-template-columns: 40px 1fr 40px;
+		grid-area: featured;
+		grid-template-columns: $content-side-margins minmax(auto, $content-width) $content-side-margins;
 		grid-template-rows: repeat(4, 1fr);
-	    margin-bottom: 60px;
+		margin: 0 ($content-side-margins*-1) 0 ($content-side-margins*-1);
 	    max-height: 560px;
 	    overflow: hidden;
-	    margin-left: -40px;
-	    margin-right: -40px;
 
 		// these are overrides. defaults are set in _article-snippet.scss
 		.feature-image__link {
@@ -27,8 +31,8 @@
 		.snippet__title {
 			grid-column: 2 / 3;
 		    grid-row: 5/6;
-			margin: 0 0 40px 0;
-			font-size: 55px;
+			margin: 0 0 30px 0;
+			font-size: 32px;
 		}
 
 		.snippet__link {
@@ -53,46 +57,29 @@
 		}
 	}
 
-	&__sub-featured {
+	&__sub-featured,
+	&__remaining {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-auto-rows: minmax(100px, auto);
-		border-bottom: solid 1px $hbc-border;
-		margin-bottom: 40px;
-		padding: 0 0 80px 0;
+		grid-template-columns: 1fr;
+	}
+
+	&__sub-featured {
+	    margin-top: 40px;
+	    border-top: solid 1px $hbc-border;
 
 		.snippet {
-
-			&:first-child {
-				border-right: solid 1px $hbc-border;
-				padding-right: 40px;
-			}	
-
-			&:last-child {
-				padding-left: 40px;
-			}
-		}	
+			padding: 40px 0 40px 0;
+		    border-bottom: solid 1px $hbc-border;
+		}
+	
 	}
 
 	&__remaining  {
 		display: grid;
-		grid-template-columns: 30% 70%;
-		grid-auto-rows: repeat(11, minmax(100px, auto));
-	    grid-template-areas:
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    "ft art"
-	    ". pg";
-
+		grid-template-columns: 1fr;
 		align-items: start;
 		padding: 40px 0 0 0;
+		margin: auto;
 
 		.snippet {
 			grid-area: art;
@@ -127,143 +114,176 @@
 			margin-right: 40px;
 		}	
 	}
-	
-	// // Wide Screens
-	// @media screen and (min-width: 1100px) {
-	  //   &__sub-featured,
-	  //   &__remaining {
-			// padding-left: 40px;
-			// padding-right: 40px;
-	  //   }
-	// }
 
-	// medium portrait
-	@include media('>=medium', '<large', 'portrait') {
+	// small landscape
+	@include media('>=small', '<medium', 'landscape') {
+	    &__featured {
+	    	max-height: 80vh;
 
-		&__sub-featured {
-		    display: flex;
-		    flex-direction: column;
-			border: 0;
-			margin-bottom: 0;
-		}
-
-		&__sub-featured {
-			padding: 0;
-
-			.snippet {
-				padding: 20px 0 40px 0;
-			    margin-bottom: 20px;
-			    border-bottom: solid 1px $hbc-border;
-
-			    &:first-child {
-					padding-top: 40px;
-					padding-right: 0px;
-				    border-top: solid 1px $hbc-border;
-			    }
-
-				&:first-child,
-				&:last-child {
-				    border-right: 0;
-				    margin-left: 0px;
-				    margin-top: 0px;
-				    padding-left: 0px;
-				}
+			.snippet__title {
+				font-size: 38px;
 			}
-		}
-
-		&__remaining {
-
-			.featured-topics {
-				top: 40px;
-			}
-
-		}
+	    }
 	}
 
-	// medium landscape
-	@include media('>=medium', '<large', 'landscape') {
-		margin-top: 20px;
+	// medium
+	@include media('>=medium') {
+		grid-template-columns: 1fr minmax(auto, $content-width) 1fr;
+		grid-template-areas:
+			". featured ."
+		;
 
-		&__remaining {
-			.featured-topics {
-				top: 40px;
-			}
+		&__featured {
+			grid-template-columns: $content-side-margins-large minmax(auto, $content-width) $content-side-margins-large;
+			margin: 0 ($content-side-margins-large*-1) 0 ($content-side-margins-large*-1);
 		}
 	}
 
 	// large
-	@include media('>large') {
-		&__featured {
-		    margin-left: 0px;
-		    margin-right: 0px;
-		}
-		
-		&__sub-featured,
-	    &__remaining {
-			padding-left: 40px;
-			padding-right: 40px;
-	    }
-	}
-
-	// mobile layout
-    @media screen and (max-width: $breakpoint-medium) {
-		
-
-		&__featured {
-			grid-template-columns: 20px 1fr 20px;
-			margin: 0 -20px 40px -20px;
-
-			.snippet__title {
-				font-size: 45px;
-			}
-		}
-				
-		&__sub-featured,
-		&__remaining {
-		    display: flex;
-		    flex-direction: column;
-			border: 0;
-			margin-bottom: 0;
-		}
+	@include media('>=large') {
 
 		&__sub-featured {
-			padding: 0;
+			grid-template-columns: 1fr repeat(2, minmax(auto, $content-width/2)) 1fr;
+			grid-auto-rows: 1fr;
+		    border-top: 0;
+			margin: 60px 0;
 
 			.snippet {
-				padding: 20px 0 40px 0;
-			    margin-bottom: 20px;
-			    border-bottom: solid 1px $hbc-border;
+				padding: 0;
+			    border: 0;
 
-			    &:first-child {
-					padding-top: 40px;
-					padding-right: 0px;
-				    border-top: solid 1px $hbc-border;
-			    }
+				&:first-child {
+					grid-column: 2 / 3;
+					border-right: solid 1px $hbc-border;
+					padding-right: 40px;
+				}	
 
-				&:first-child,
 				&:last-child {
-				    border-right: 0;
-				    margin-left: 0px;
-				    margin-top: 0px;
-				    padding-left: 0px;
+					grid-column: 3 / 4;
+					padding-left: 40px;
 				}
 			}
 		}
 
-		&__remaining  {
-			grid-template-columns: 1fr;
-			padding-top: 0;
-
-			.snippet {
-			    padding-left: 0;
-			    border-left: 0;
-			    width: 100%;
-
-			    &:first-of-type {
-					padding-top: 20px;
-			    }
-			}
-		}	
+		// &__remaining {
+		// 	display: grid;
+		// 	grid-template-columns: minmax(auto, $content-width*.3) minmax(auto, $content-width*.7);
+		// 	grid-auto-rows: repeat(11, minmax(100px, auto));
+		//     grid-template-areas:
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     "ft art"
+		//     ". pg";
+		// }
 	}
+
+
+
+
+ //    // small landscape
+	// @include media('>=small', '<medium', 'landscape') {
+	// 	&__featured {
+	// 		height: 90vh;
+	// 	}
+	// }
+
+	// // medium portrait
+	// @include media('>small', '<medium') {
+
+	// 	&__featured {
+	// 		margin-left: -40px;
+	// 		margin-right: -40px;
+	// 	}
+
+	// 	&__sub-featured {
+	// 	    display: flex;
+	// 	    flex-direction: column;
+	// 		border: 0;
+	// 		margin-bottom: 0;
+	// 	}
+
+	// 	&__sub-featured {
+	// 		padding: 0;
+
+	// 		.snippet {
+	// 			padding: 20px 0 40px 0;
+	// 		    margin-bottom: 20px;
+	// 		    border-bottom: solid 1px $hbc-border;
+
+	// 		    &:first-child {
+	// 				padding-top: 40px;
+	// 				padding-right: 0px;
+	// 			    border-top: solid 1px $hbc-border;
+	// 		    }
+
+	// 			&:first-child,
+	// 			&:last-child {
+	// 			    border-right: 0;
+	// 			    margin-left: 0px;
+	// 			    margin-top: 0px;
+	// 			    padding-left: 0px;
+	// 			}
+	// 		}
+	// 	}
+
+	// 	&__sub-featured,
+	// 	&__remaining {
+	// 		padding-left: 40px;
+	// 		padding-right: 40px;
+
+	// 		.featured-topics {
+	// 			top: 40px;
+	// 		}
+
+	// 	}
+	// }
+
+	// // medium landscape
+	// @include media('>=medium', '<large', 'landscape') {
+
+	// 	&__remaining {
+	// 		padding-left: 40px;
+	// 		padding-right: 40px;
+
+	// 		.featured-topics {
+	// 			top: 40px;
+	// 		}
+	// 	}
+	// }
+
+	// mobile layout
+    // @media screen and (max-width: $breakpoint-medium) {
+		
+				
+
+
+		// &__sub-featured {
+		// 	padding: 0;
+
+
+		// }
+
+		// &__remaining  {
+		// 	grid-template-columns: 1fr;
+		// 	padding-top: 0;
+
+		// 	.snippet {
+		// 	    padding-left: 0;
+		// 	    border-left: 0;
+		// 	    width: 100%;
+
+		// 	    &:first-of-type {
+		// 			padding-top: 20px;
+		// 	    }
+		// 	}
+		// }	
+	// }
 }
 
